--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                     <div class="section-3-image-right text-lg-start">
                         <img src="images/matha.jpeg" class="img-fluid sec3-images sec3-img-right" alt="">
                     </div>
+                    </div>
                     <!--<div class="section-3-button-right text-lg-start">
                         <button class="sec3-btn-right text-uppercase fw-bold" onclick="location.href='#'">
                             Read More
