--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 
                 <div class="col-lg-6 section-3-inner-col-right text-center mt-5 mt-lg-0">
                     <div class="section-3-image-right text-lg-start">
-                        <img src="images/matha.jpeg" class="img-fluid sec3-images sec3-img-right" alt="">
+                        <img src="images/popo.jpg" class="img-fluid sec3-images sec3-img-right" alt="">
                     </div>
                 </div>
             </div>
