--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                          </div>
                     <!-- </div>
                 </div> -->
-                    
+                    </section>
                     <br><br><br><br><br>
                     
         <div class="bold-line"></div>
@@ -929,6 +929,7 @@
                 </div> -->
                 <div class="section-7-text footertxt">
                     Thanks for visiting my profile
+                    <br><br>
                 </div>
                 <br>
                 <br>
