--- a/index.html
+++ b/index.html
@@ -728,6 +728,28 @@
                     <a href="#"><img src="./images/port.png" class="img-fluid sec6-image" alt=""></a>
                 </div>
             </div>
+            <br><br>
+            <div class="row section-6-inner mx-auto mt-5">
+                <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
+                    <a href="https://github.com/bookhead4moron/Youtube-Video-Downloader"><img src="./images/yt.png" class="img-fluid sec6-image" alt=""></a><br><br><br>
+                </div>
+                <div class="col-lg-6 sec-6-left  pe-0 pe-lg-4">
+                    <div class="section-6-heading">
+                        <span class="fw-bold"> YouTube Video Downloader</span>
+                    </div>
+                    <div class="section-6-para">
+                        <li>This is a GUI based app which helps you to download videos from YouTube in a bulk.
+                            The project is implemented using the TKINTER and PYTUBE libraries of Python.</li>
+                            <li>After running the program, the user have to paste the video link/links which he/she wants to download. If they are downloading multiple videos at the same time, write down a comma (",") in between the links. </li>
+                            <li>select the desired location in his/her computer followed by selecting specific quality of the videos as per the user's choice and press the download button. It will start downloading automatically and saves the videos to the destination location one by one.</li> 
+                        
+                        
+                    </div>
+                    <div class="section-6-button">
+                        <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='https://youtu.be/fVeU_zDIJLA' ">View Video Demo</a>
+                    </div>
+                </div>
+            </div>
 
             <!-- <div class="row mt-5">
                 <div class="section-6-button-see-all text-center">
