--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a class="nav-link nav-custom-link" href="#my-project">Project</a>
                 </li>
                 <li class="nav-item navigation-list">
-                    <a class="nav-link nav-custom-link" href="https://drive.google.com/file/d/1j9A7UuKBqv3wl5qyN8D-c69Z4AChqyKk/view?usp=sharing">Resume</a>
+                    <a class="nav-link nav-custom-link" href="https://drive.google.com/file/d/1A0ojImxt9A5uqL1rOHCGR9Jg0Axj1iW3/view?usp=sharing">Resume</a>
                 </li>
                 <li class="nav-item navigation-list">
                     <a class="nav-link nav-custom-link" href="#section-contact">Contact</a>
@@ -92,7 +92,8 @@
                     <div class="paragraph mx-auto mt-2">
                         Hello everyone! Welcome to my website. My name is Ritam Sadhu. I am an Engineering 
                         Undergraduate student. I am pursuing my B.E. degree from Jadavpur University. I am 
-                        eager to build my career in Software and Web development areas.
+                        very passionate about Competititve Programming. I am currently learning Machine 
+                        Learning and Data Science. I am also Interested in Front-End Web Development.
                     </div>
                     <!--<a type="button" class="section-2-button fw-bold">Read More</a>-->
                 </div>
@@ -512,11 +513,12 @@
                                   <li class="xd">CSS</li>
                                   <li class="xd">JavaScript</li>
                                   <li class="xd">jQuery</li>
-                                  <li class="xd">Node.js</li>
+                                  <li class="xd">Python</li>
                                   <li class="xd">Front-End Development</li>
                                   <li class="xd">SQL</li>
                                   <li class="xd">Data Structures and Algorithm</li>
                                   <li class="xd">AutoCAD</li>
+                                  <li class="xd">Machine Learning</li>
                                   <li class="xd">MS Office, Powerpoint, Excel</li>
                                   
                                 </ul>
