--- a/index.html
+++ b/index.html
@@ -676,6 +676,25 @@
             <br>
             <br>
             <br><br><br><br><br>
+            <div class="row section-6-inner mx-auto mt-5">
+                <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
+                    <a href="https://bookhead4moron.github.io/portfolio/"><img src="images/graph.png" class="img-fluid sec6-image" alt=""></a><br><br><br>
+                </div>
+                <div class="col-lg-6 sec-6-left  pe-0 pe-lg-4">
+                    <div class="section-6-heading">
+                        <span class="fw-bold"> Real Estate Price Prediction </span>
+                    </div>
+                    <div class="section-6-para">
+                   
+                        <li> Developed a Machine Learning Model that tries to Predict the Price of anapartment based on parameters as given in the dataset obtained from Kaggle</li>
+                        <li>This project is implemented using the machine learning algorithm (Linear Regression) and accuracy score is 84%</li>
+                        
+                    </div>
+                    <div class="section-6-button">
+                        <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='https://github.com/bookhead4moron/Real-Estate-Price-Prediction' ">View Project</a>
+                    </div>
+                </div>
+            </div>
             <div class="row section-6-inner mx-auto">
                 <div class="col-lg-6 sec-6-left  pe-0 pe-lg-4">
                     <div class="section-6-heading">
