--- a/index.html
+++ b/index.html
@@ -686,8 +686,8 @@
                     </div>
                     <div class="section-6-para">
                    
-                        <li> Developed a Machine Learning Model that tries to Predict the Price of anapartment based on parameters as given in the dataset obtained from Kaggle</li>
-                        <li>This project is implemented using the machine learning algorithm (Linear Regression) and accuracy score is 84%</li>
+                        <li>I Developed a Machine Learning Model that tries to Predict the Price of anapartment based on parameters as given in the dataset obtained from Kaggle.</li>
+                        <li>This project is implemented using the machine learning algorithm (Linear Regression) and accuracy score is 84%.</li>
                         
                     </div>
                     <div class="section-6-button">
@@ -695,6 +695,7 @@
                     </div>
                 </div>
             </div>
+            <br><br>
             <div class="row section-6-inner mx-auto">
                 <div class="col-lg-6 sec-6-left  pe-0 pe-lg-4">
                     <div class="section-6-heading">
